# dvmn-telegram-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: dvmn_telegram_bot.py
